RESOLVED FIXED224828
Platform Key registration does not prompt for user password when in biometric lockout
https://bugs.webkit.org/show_bug.cgi?id=224828
Summary Platform Key registration does not prompt for user password when in biometric...
Jiewen Tan
Reported 2021-04-20 14:15:30 PDT
Platform Key registration does not prompt for user password when in biometric lockout.
Attachments
Patch (2.14 KB, patch)
2021-04-20 14:18 PDT, Jiewen Tan
no flags
Jiewen Tan
Comment 1 2021-04-20 14:15:53 PDT
Jiewen Tan
Comment 2 2021-04-20 14:18:55 PDT
Brent Fulgham
Comment 3 2021-04-20 14:41:52 PDT
Comment on attachment 426590 [details] Patch r=me
Jiewen Tan
Comment 4 2021-04-20 14:48:13 PDT
Comment on attachment 426590 [details] Patch Thanks Brent for r+ this patch.
EWS
Comment 5 2021-04-20 15:13:36 PDT
Committed r276320 (236801@main): <https://commits.webkit.org/236801@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426590 [details].
Note You need to log in before you can comment on or make changes to this bug.