Platform Key registration does not prompt for user password when in biometric lockout https://bugs.webkit.org/show_bug.cgi?id=224828 <rdar://76907840>

Reviewed by Brent Fulgham.

Covered by manul tests.

* UIProcess/WebAuthentication/Cocoa/LocalConnection.mm:
(WebKit::LocalConnection::verifyUser):


Canonical link: https://commits.webkit.org/236801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276320 268f45cc-cd09-0410-ab3c-d52691b4dbfc